# hakai-ml-train

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Base-Dockerfile  CLAUDE.md  Dockerfile  README.md  Seagrass_Test.ipynb  build_and_push.sh  build_and_run.sh  classify_nanwakolis.sh  convert_model.py  count_files.py  deeplabv3.py  docker-compose-local-overrides.yml  docker-compose.yml  environment.yml  eval_deeplabv3.py  filter_img_ds.py  kelp_data_module.py  kelp_presence_data_module.py  lit_deeplabv3_kelp_presence.py  lit_deeplabv3_resnet101_kelp.py  lit_lraspp_mobilenet_v3_large_kelp.py  lit_unet_kelp.py  lit_unet_kelp_presence.py  make_ml_ds.py  make_ml_ds_raster.py  make_ml_ds_vector.py  mv_kelp_files.sh  mv_seagrass_files.sh  predict_tiff.py  pyproject.toml  requirements.txt  sagemaker_kelp_dataset.py  sagemaker_seagrass_dataset.py  segment_kelp.sh  segment_kelp_species.sh  trace.ipynb  trace_models.py  (+6 more)
.claude/: settings.json
aws_scripts/: aws_train.sh  mount-ebs-kelp.sh  mount-ebs-seagrass.sh  mount-ebs-train-kelp.sh  mount-ebs-train-seagrass.sh  mount-ebs-train.sh  mount-ebs.sh  spot-fleet-config-m4-large-kelp.json  spot-fleet-config-m4-large-seagrass.json  spot-fleet-config-m4-large.json  spot-fleet-config-p2-xlarge.json  spot-fleet-config-p3-2xlarge-kelp.json  spot-fleet-config-p3-2xlarge-seagrass.json  spot-fleet-config-p3-2xlarge.json  spot-fleet-config-p3-8xlarge-kelp.json  spot-fleet-config-p3-8xlarge-seagrass.json  spot-fleet-config-p3-8xlarge.json
data_prep/: exposure.py  filter_datasets.py  img_stats.py  normalize.py  preprocess_chips.py
datasets/: kelp_data_module.py  vis.py
deeplabv3/: Dockerfile  deeplabv3.py  deeplabv3_old.py
dev_notebooks/: COGDataloader.ipynb  DataModule.ipynb  DatasetNormalization.ipynb  HanningWindow.ipynb  Inference.ipynb  Scheduler.ipynb  UNet.ipynb  WebUI.ipynb  torchseg.ipynb
eval/: test_kom.py  test_new_model.py
gui/: Makefile  form.ui  main.py  models  worker.py
inference/: inference.py  kernels.py
job_queue/: create_jobs_db.sql  job.py  kelp.sqlite  run.py  run_jobs.py  utils.py
kelp/: Base-Dockerfile  Dockerfile  __init__.py  build_and_eval.sh  build_and_pred.sh  build_and_train.sh  cli.py  deeplabv3_lightning.py  make_kelp_datasets.sh  model.py  predictor.py  segment_kelp.py  train_configs.csv  trainer.py  watchdog.py
kelp-unet/: build_and_eval.sh  build_and_pred.sh  build_and_train.sh
kelp_species/: Dockerfile  build_and_pred.sh  build_and_train.sh  cli.py  deeplabv3_lightning.py  make_kelp_datasets.sh  model.py  predictor.py  qualitative_test.sh  trainer.py
models/: deeplabv3.py  deeplabv3_lightning.py  deeplabv3_resnet101.py  lit_deeplabv3_resnet101_kelp.py  lit_lraspp_mobilenet_v3_large_kelp.py  lit_unet_kelp.py  lraspp_mobilenet_v3_large.py  mixins.py  predict_tiff.py  unet.py
notebooks/: create_skema_aux_files.ipynb  crop_images.ipynb  deeplabv3.ipynb  export_skema_models_onnx.ipynb  filter_img_ds.ipynb  make_ml_ds.ipynb  pytorch_datasets.ipynb  segmentation_metrics.ipynb  visualize_augmentations.py
sagemaker/: Dockerfile  sagemaker_datasets.py
scripts/: aws_train.sh  kfold_label_audit.py  (+6 more)
(+411 files in other folders)
