[project]
name = "hakai-ml-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "einops>=0.8.1",
    "lightning[pytorch-extra]>=2.5.1",
    "onnx>=1.18.0",
    "pydantic>=2.11.7",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.7.1",
    "torchaudio>=2.6.0",
    "torchmetrics>=1.7.3",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "pre-commit>=4.1.0",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
