[project]
name = "hakai-ml-train"
version = "0.1.0"
description = "Training scripts for segmentation models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "datasets>=4.5.0",
    "einops>=0.8.1",
    "huggingface-hub>=1.4.1",
    "lightly[timm]>=1.5.21",
    "lightning>=2.5.1,<2.6.2",
    "onnx>=1.18.0",
    "onnxscript>=0.6.2",
    "opencv-python-headless>=4.13.0.92",
    "pyarrow>=23.0.1",
    "pydantic>=2.11.7",
    "rich>=14.2.0",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.11.0",
    "torchmetrics>=1.7.3",
    "torchvision>=0.26.0",
    "tqdm>=4.67.1",
    "transformers>=5.1.0",
    "wandb>=0.21.0",
    "webdataset>=1.0.2",
    "zarr>=3.1.6",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "pre-commit>=4.1.0",
    "pytest>=9.0.3",
    "ruff>=0.11.2",
    "torchgeo>=0.9.0",
]


[tool.uv]
exclude-newer = "7 days"

[tool.ruff.lint]
extend-select = [
    "B",
    "SIM",
    "I",
]
